# NapiDemo

./: oh-package.json5
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/cpp/: CMakeLists.txt  async.cpp  async.h  hello.cpp  hello.h  promise.cpp  promise.h
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/utils/: ImageUtils.ets
